# methopts

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml
data/: dataset.tsv
include/common/: Types.h
output/: beta.txt  lbfgs_history.csv  newton_result.txt  solution.json
scripts/: plot_convergence.py  plot_lagrangian.py  plot_lbfgs.py  plot_regression.py  plot_tsp.py  train_and_plot_regression.py
src/common/: CMakeLists.txt  Types.cpp
task0_simplex/: CMakeLists.txt
task0_simplex/include/: Simplex.h
task0_simplex/src/: Simplex.cpp
task0_simplex/tests/: test_simplex.cpp
task1_sgd_constrained/: CMakeLists.txt
task1_sgd_constrained/include/: ConstrainedSGD.h  LinearRegressionSGD.h
task1_sgd_constrained/src/: ConstrainedSGD.cpp  LinearRegressionSGD.cpp
task1_sgd_constrained/tests/: test_constrained_sgd.cpp  test_linear_regression.cpp
task1_sgd_constrained/train/: train_linear_regression.cpp
task2_newton/: CMakeLists.txt
task2_newton/include/: NewtonOptimizer.h
task2_newton/src/: NewtonOptimizer.cpp
task2_newton/tests/: test_newton.cpp
task2_newton/train/: train_constrained_newton.cpp
task3_advanced_sgd/: CMakeLists.txt
task3_advanced_sgd/include/: Optimizers.h
task3_advanced_sgd/src/: Optimizers.cpp
task3_advanced_sgd/tests/: test_optimizers.cpp
task3_advanced_sgd/train/: experiments.cpp
task4_lbfgs/: CMakeLists.txt
task4_lbfgs/include/: LBFGS.h
task4_lbfgs/src/: LBFGS.cpp
task4_lbfgs/tests/: test_lbfgs.cpp
task4_lbfgs/train/: print_solution.cpp  train_lbfgs.cpp
task5_branch_and_cut_tsp/: CMakeLists.txt
task5_branch_and_cut_tsp/include/: BranchAndCutSolver.h  Graph.h  LPModel.h
task5_branch_and_cut_tsp/src/: BranchAndCutSolver.cpp  Graph.cpp  LPModel.cpp
task5_branch_and_cut_tsp/tests/: test_branch_and_cut.cpp
task5_branch_and_cut_tsp/train/: demo_bac_tsp.cpp
